# white-room-pedalboard

./: .gitignore  .gitmodules  ARCHITECTURE_FIX_PROGRESS.md  BD_ISSUES_MIGRATION_TRACKING.md  BIPHASE_PLUGIN_IMPLEMENTATION_COMPLETE.md  BUILD_AUDIT_REPORT.md  BUILD_COMPLETE.md  BUILD_COMPLETE_SUCCESS.md  BUILD_ORGANIZATION_SUMMARY.md  BUILD_STATUS.md  BUILD_STRUCTURE.md  BUILD_SUCCESS_REPORT.md  CHORAL_FORMATS_EXECUTIVE_SUMMARY.md  CHORAL_PLUGIN_FORMATS_IMPLEMENTATION_PLAN.md  CMakeLists.txt  CMakeLists_plugin.txt  CMakeUserPresets.json  FILTERGATE_MIGRATION_REPORT.md  FINAL_BUILD_REPORT.md  FINAL_MULTI_FORMAT_REPORT.md  FINAL_SESSION_COMPLETE.md  FarFarAway_vst3_helper  INSTRUMENTS_EFFECTS_STATUS_REPORT.md  INSTRUMENT_MIGRATION_REQUIREMENTS.md  JUCE_PLUGIN_FORMATS_GUIDE.md  JucePluginDefines.h  MULTI_FORMAT_BUILD_STATUS.md  NEXT_STEPS.md  PLUGIN_FORMATS_GUIDE.md  PLUGIN_MIGRATION_PHASE_1_SUMMARY.md  PLUGIN_MIGRATION_PLAN.md  PLUGIN_MIGRATION_STATUS.md  PRODUCTION_READINESS_REPORT.md  PedalboardEditor.cpp  PedalboardEditor.h  QUICKSTART.md  README.md  REPO_STANDARDIZATION_SUMMARY.md  SECURITY_FIXES.md  SESSION_COMPLETE_SUMMARY.md  (+16 more)
effects/biPhase/: CMakeLists.txt
ios/SharedDSP/: CMakeLists.txt  DSPBridge.cpp  DSPBridge.h  LocalGalDSP.cpp  LocalGalDSP.h
juce_backend/: .clang-tidy-safe-types  .dockerignore  .env.example  .gitignore  .gitignore-global  .gitmodules  .pre-commit-config.yaml  BUILD_MATRIX.md  BUILD_PLATFORMS.md  BUILD_SYSTEM_SUMMARY.md  CLAP_COMPLETION_REPORT.md  CLAUDE.md  CMakeLists.txt  CORE_DSP_ARCHITECTURE_COMPLETION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  NORMALIZATION_REPORT.md  README.md  STANDALONE_BUILD_REPORT.md  STANDALONE_COMPLETION_REPORT.md  STANDALONE_QUICK_REFERENCE.md  SUBTREE_SPLIT_README.md  SmartPluginUIDynamic_placeholders.cpp  TDD_EXECUTION_SUMMARY.md  Tiltfile  UNDO_REDO_IMPLEMENTATION_COMPLETE.md  add_standalone_support.sh  build_all.sh  build_all_platforms.sh  build_all_standalones.sh  build_individual_pedals.sh  build_ios.sh  build_ios_device.sh  build_ios_simulator.sh  build_macos.sh  build_tvos.sh  build_tvos_simulator.sh  fly.toml  juce_backend_files_categorization.txt  pyproject.toml  (+4 more)
juce_backend/.beads/: audio_agent_tree_1.db-shm  audio_agent_tree_1.db-wal  issues.jsonl
juce_backend/.brv/: config.json
juce_backend/.github/: copilot-instructions.md
juce_backend/aether_giant_horns_plugin_build/: CMakeLists.txt
juce_backend/aether_giant_voice_plugin_build/: CMakeLists.txt
juce_backend/aetherdrive_plugin_build/: CMakeLists.txt
juce_backend/cmake/: Info.plist.in
juce_backend/console/: CONSOLE_X_DSP_HANDOFF.md  ConsoleChannelDSP.cpp  ConsoleChannelDSP.h  ConsoleDSP.cpp  README.md
juce_backend/core/: README.md
juce_backend/daid-core/: .eslintrc.js  .gitignore  .npmrc  DAID-V2-INTEGRATION-SUMMARY.md  DAID.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  README.md  __init__.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  test-daid-v2-integration.ts  tsconfig.json  vitest.config.ts
juce_backend/docker/: Dockerfile.backend  Dockerfile.frontend
juce_backend/docs/: 100_COMPLETION_REPORT.md  AETHER_STRING_V2_ARCHITECTURE.md  AETHER_STRING_V2_DESIGN.md  AETHER_STRING_V2_QUICK_REFERENCE.md  AETHER_STRING_V2_TASK_BREAKDOWN.md  APPLETV_TEAM_HANDOFF.md  AUDIO_ANALYSIS_IMPLEMENTATION_GUIDE.md  AUDIO_BUFFER_MANAGEMENT.md  AUDIO_FILE_IO_GUIDE.md  BUILD_FIXES_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_SYSTEM_ACTION_ITEMS.md  BUILD_SYSTEM_ANALYSIS.md  BUILD_SYSTEM_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION.md  DAID-CORE-PYTHON-ANALYSIS.md  DAID-IMPLEMENTATION-GUIDE.md  DAID-PROVENANCE-CONSUMPTION-GUIDE.md  DAID-PROVENANCE-SPECIFICATION.md  DEVELOPER_GUIDE.md  DSP_INSTRUMENT_STATUS.md  DYNAMIC_ALGORITHM_SMART_CONTROLS_INTEGRATION_SUMMARY.md  ENGINE_EXECUTION_LANGUAGE.md  ENSEMBLE_IMPLEMENTATION_PLAN.md  ENSEMBLE_MODEL_SEPARATION.md  ENSEMBLE_PHASE1-2_DETAIL.md  ExecutionLanguageGuidelines.md  FEATURES_v1.1.0.md  FEATURES_v1.2.0.md  FINAL_STATUS_REPORT.md  FLUTTER_INTEGRATION_CHEAT_SHEET.md  FLUTTER_INTEGRATION_SUMMARY.md  FLUTTER_REST_API_INTEGRATION.md  FLUTTER_WEBSOCKET_INTEGRATION.md  GPL_ISOLATION.md  HANDOFF_STATUS_REPORT.md  HOUSE_BAND.md  IMPLEMENTATION_SUMMARY.md  JUCE_BACKEND_CLEANUP.md  JUCE_conversion.md  (+78 more)
juce_backend/drummachine_plugin_build/: CMakeLists.txt
juce_backend/dsp/: FormantResonator.h  FormantResonatorFloat.h  FormantResonator_MATHEMATICAL_DERIVATION.md  SPEC-002_COMPLETION_REPORT.md  SPEC-002_FormantResonator_Corrected_Specification.md
juce_backend/dsp_test_harness/: CMakeLists.txt  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_TEST_REPORT.md  FEATURE_ANALYSIS_COMPLETE.md  PEDAL_FEATURE_MATRIX.json  README.md  analyze_pedal_features.py  analyze_pedal_features_v2.py
juce_backend/effects/: AirwindowsInternalProcessor.cpp  CHORUS_ENHANCEMENT_COMPLETE.md  DELAY_ENHANCEMENT_COMPLETE.md  FUZZ_ENHANCEMENT_COMPLETE.md  InterchangeableEffectSlot.cpp  OVERDRIVE_ENHANCEMENT_COMPLETE.md  PEDALBOARD_SYSTEM.md  PEDAL_ENHANCEMENTS.md  README.md  SYSTEM_ARCHITECTURE.md
juce_backend/engine/: AudioEngine.cpp  AudioEngine.h
juce_backend/farfaraway_plugin_build/: CMakeLists.txt
juce_backend/filtergate_plugin_build/: BUILD_SUMMARY.md  CMakeLists.txt
juce_backend/frontend/: .env.example  README.md  build-tvos-sdk.sh  eslint.config.js  fix-linting.cjs  index.html  package-lock.json  package.json  quicksort.js  setup.sh  setup.ts  tailwind.config.js  test-setup.ts  test.html  tsconfig.check.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.frontend.config.ts  vitest.global-setup.ts  vitest.integration.config.ts  vitest.sdk-unit.config.ts  vitest.shared.config.ts  vitest.workspace.config.ts  vitest.workspace.default.config.ts  vitest.workspace.perf.config.ts
juce_backend/giant_instruments_plugin_build/: CMakeLists.txt
juce_backend/include/: Constants.h  JuceFFI_bindings.h  JuceHeader.h  SmoothedParametersMixin.h  projection_engine.h
juce_backend/instruments/: STEREO_BY_INSTRUMENT.md  STEREO_IMPLEMENTATION_SUMMARY.md  (+3 more)
(+3065 files in other folders)
